# ProjectC

./: .fuse_hidden000005d500000001  .gitignore  CMakeLists.txt  Makefile  README.md  board.c  board.h  main  main.c  main.h  play.sh  regex.c  test
c-bin/: UI  main  test
c-head/: board.h  find.h  game.h  gameNoUI.h  gameUI.h  getLine.h  gui.h  ia.h  main.h  menu.h  myRegex.h  rules.h
c-res/thxToMrCarle/: palette.txt
c-src/: board.c  find.c  game.c  gameNoUI.c  gameUI.c  getLine.c  gui.c  ia.c  main.c  menu.c  myRegex.c  rules.c
